# ML

./: README.md
homework1/: Cargo.toml
homework1/src/: main.rs
homework2/: Cargo.toml
homework2/python_edition/: hw2.py
homework2/src/: main.rs
homework3/: default.nix  homework3.cabal  hw3.nix
homework3/src/: Main.hs
homework3/src/SVM/: Types.hs
homework3/src/SVM/Internal/: Misc.hs  SMO.hs
homework4/: .gitignore  default.nix  hw4.nix  prices.txt
homework4/linear_regression/: CMakeLists.txt  main.cpp
homework5/SVD_recommender_system/: CMakeLists.txt  main.cpp
homework6/part1/: datum.py  decision_tree.py  main.py
homework6/part2/: .gitignore  perceptron.cabal  project.nix
homework6/part2/src/: Backprop.hs  Main.hs  MatrixPlus.hs  Mnist.hs  NeuralNet.hs  Runner.hs
